tests/ui/try_transmute-size-decrease.nightly.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/try_transmute-size-decrease.rs:17:41
   |
17 | ... Result<u8, _> = try_transmute!(AU16(0));
   |                     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `AU16` (16 bits)
   = note: target type: `u8` (8 bits)
   = note: this error originates in the macro `try_transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0512`.
